--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,115 +1,176 @@
 body {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  background-color: black !important;
-  display: block;
-  margin: 0 auto;
-  overflow: hidden;
-}
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	background-color: black !important;
+	display: block;
+	margin: 0 auto;
+	overflow: hidden;
+	}
+
+
 
 .radar{
-width:300px;
-height:200px;
-position: absolute;
-top:20px;
-right:20px;
-background-color: transparent;
-border: 2px solid;
-border-color: #006600;
-overflow: hidden;
--webkit-border-radius: 6px;
--moz-border-radius: 6px;
-border-radius: 6px;
+	width:300px;
+	height:200px;
+	position: absolute;
+	top:20px;
+	right:20px;
+	background-color: transparent;
+	border: 2px solid;
+	border-color: #006600;
+	overflow: hidden;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
 }
 
-.rankheader{
-
-}
-ul.rank{
-list-style-type: decimal;
-width:200px;
-min-height: 20px;
-position: absolute;
-top:20px;
-left:3px;
-background-color: transparent;
-border: 2px solid;
-border-color: #006600;
--webkit-border-radius: 6px;
--moz-border-radius: 6px;
-border-radius: 6px;
-overflow: hidden;
+#grouprank{
+	color: green;
+	font-size: 15px;
+	text-align: center;
+	position: absolute;
+	width:300px;
+	bottom:0px;
+	right:20px;
+	margin: 0;
+	padding: 0;
+	border-bottom: 2px solid;
 }
 
-ul.rank > li {
-
-height:30px;
-font-size: 20px;
-font-weight: bold;
-color: green;
+#grouprank .bar {
+	display: flex;
+	flex-direction:column-reverse;
+	float: left;
+	border: 0;
+	height: 300px;
+	margin: 0 0 0 0;
+	padding: 0 0 0 0;
+	width: 25%;
 }
-ul.rank > li > span{
-float:right;
+
+#grouprank .number{
+	align-items: flex-start; 
+}
+
+#grouprank .bar-inside{
+	border-radius: 4px 4px 0 0; /* Remember vendor prefixes */
+	align-self: flex-end;
+	width:100%;
+	opacity:0.3;
+}
+
+#grouprank .bar-inside.red {
+	background-color: red;
+	height: 60px;
+}
+
+#grouprank .bar-inside.blue {
+	background-color: blue;
+	height: 90px;
+}
+
+#grouprank .bar-inside.yellow {
+	background-color: yellow;
+	height: 120px;
+}
+
+#grouprank .bar-inside.green {
+	background-color: green;
+	height: 30px;
+}
+
+#rank{
+	color: green;
+	font-size: 30px;
+	position: absolute;
+	top:10px;
+	left:3px;
+	text-align: center;
+}
+#rank ul{
+	list-style-type: decimal;
+	width:200px;
+	min-height: 20px;
+	position: relative;
+	background-color: transparent;
+	border: 2px solid;
+	border-color: #006600;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
+	border-radius: 6px;
+	overflow: hidden;
+	text-align: left;
+}
+
+#rank ul > li {
+
+	height:30px;
+	font-size: 20px;
+	font-weight: bold;
+	color: green;
+}
+#rank ul > li > span{
+	float:right;
 }
 
 .lifebar{
-width:300px;
-height:20px;
-position: absolute;
-top:20px;
-left:40px;
-background-color: transparent;
-border: 1px solid;
-border-color: #006600;
+	width:300px;
+	height:20px;
+	position: absolute;
+	top:20px;
+	left:40px;
+	background-color: transparent;
+	border: 1px solid;
+	border-color: #006600;
 }
 
 .lifebar > div{
- background-color: green;
- width: 100%;
- height: 18px;
+	background-color: green;
+	width: 100%;
+	height: 18px;
 }
 
 .status{
-font-size: 20px;
-position: absolute;
-top:17px;
-left:360px;
-vertical-align: top;
-background-color: transparent;
-color: green;
+	font-size: 20px;
+	position: absolute;
+	top:17px;
+	left:360px;
+	vertical-align: top;
+	background-color: transparent;
+	color: green;
 }
 
 .circle {
-border-radius: 50%;
-width: 5px;
-height: 5px;
-position:absolute;
-background-color: red;
+	border-radius: 50%;
+	width: 5px;
+	height: 5px;
+	position:absolute;
+	background-color: red;
 }
 
 .front {
-z-index:1000;
+	z-index:1000;
 }
 
 .modal-dialog {
-width:300px !important;
+		width:300px !important;
 }
 
 .mousepointer{
-width: 60px;
+	width: 60px;
 }
 
 .mouseclick{
-width: 80px;
+	width: 80px;
 }
 
 .howto{
-text-align: center;
+	text-align: center;
 }
 
 .spacebar{
-width: 100px;
+	width: 100px;
 }
 .modal-backdrop{
 	z-index:0;
