--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,15 +18,34 @@ body {
 	right:20px;
 	background-color: transparent;
 	border: 2px solid;
-	border-color: #006600;
 	overflow: hidden;
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
 	border-radius: 6px;
 }
 
-#grouprank{
+body.green{
 	color: green;
+	border-color: green;
+}
+body.yellow {
+	color: yellow;
+	border-color: yellow;
+}
+body.red{
+	color: red;
+	border-color: red;
+}
+body.blue {
+	color: blue;
+	border-color: blue;
+}
+
+.howto {
+	color: black;
+}
+
+#grouprank{
 	font-size: 15px;
 	text-align: center;
 	position: absolute;
@@ -43,7 +62,7 @@ body {
 	flex-direction:column-reverse;
 	float: left;
 	border: 0;
-	height: 300px;
+	height: 100px;
 	margin: 0 0 0 0;
 	padding: 0 0 0 0;
 	width: 25%;
@@ -57,31 +76,30 @@ body {
 	border-radius: 4px 4px 0 0; /* Remember vendor prefixes */
 	align-self: flex-end;
 	width:100%;
-	opacity:0.3;
+	opacity:0.5;
 }
 
 #grouprank .bar-inside.red {
 	background-color: red;
-	height: 60px;
+	height: 5%;
 }
 
 #grouprank .bar-inside.blue {
 	background-color: blue;
-	height: 90px;
+	height: 5%;
 }
 
 #grouprank .bar-inside.yellow {
 	background-color: yellow;
-	height: 120px;
+	height: 5%;
 }
 
 #grouprank .bar-inside.green {
 	background-color: green;
-	height: 30px;
+	height: 5%;
 }
 
 #rank{
-	color: green;
 	font-size: 30px;
 	position: absolute;
 	top:10px;
@@ -95,7 +113,6 @@ body {
 	position: relative;
 	background-color: transparent;
 	border: 2px solid;
-	border-color: #006600;
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
 	border-radius: 6px;
@@ -108,37 +125,9 @@ body {
 	height:30px;
 	font-size: 20px;
 	font-weight: bold;
-	color: green;
 }
 #rank ul > li > span{
 	float:right;
-}
-
-.lifebar{
-	width:300px;
-	height:20px;
-	position: absolute;
-	top:20px;
-	left:40px;
-	background-color: transparent;
-	border: 1px solid;
-	border-color: #006600;
-}
-
-.lifebar > div{
-	background-color: green;
-	width: 100%;
-	height: 18px;
-}
-
-.status{
-	font-size: 20px;
-	position: absolute;
-	top:17px;
-	left:360px;
-	vertical-align: top;
-	background-color: transparent;
-	color: green;
 }
 
 .circle {
@@ -175,3 +164,131 @@ body {
 .modal-backdrop{
 	z-index:0;
 }
+
+/**
+ * Static pie charts
+ */
+
+.meter { 
+	box-sizing:  content-box;
+	left: 10px; bottom: 20px;
+	width: 200px;
+	height: 10px;  /* Can be anything */
+	position: absolute;
+	background: #555;
+	-moz-border-radius: 15px;
+	-webkit-border-radius: 15px;
+	border-radius: 15px;
+	padding: 5px;
+	-webkit-box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
+	-moz-box-shadow   : inset 0 -1px 1px rgba(255,255,255,0.3);
+	box-shadow        : inset 0 -1px 1px rgba(255,255,255,0.3);
+		}
+.meter > span {
+	display: block;
+	height: 100%;
+	-webkit-border-top-right-radius: 4px;
+	-webkit-border-bottom-right-radius: 4px;
+	-moz-border-radius-topright: 4px;
+	-moz-border-radius-bottomright: 4px;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+	-webkit-border-top-left-radius: 10px;
+	-webkit-border-bottom-left-radius: 10px;
+	-moz-border-radius-topleft: 10px;
+	-moz-border-radius-bottomleft: 10px;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+	
+	-webkit-box-shadow: 
+		inset 0 2px 9px  rgba(255,255,255,0.3),
+		inset 0 -2px 6px rgba(0,0,0,0.4);
+	-moz-box-shadow: 
+		inset 0 2px 9px  rgba(255,255,255,0.3),
+		inset 0 -2px 6px rgba(0,0,0,0.4);
+	box-shadow: 
+		inset 0 2px 9px  rgba(255,255,255,0.3),
+		inset 0 -2px 6px rgba(0,0,0,0.4);
+	position: relative;
+	overflow: hidden;
+}
+.meter > span:after{
+	content: "";
+	position: absolute;
+	top: 0; left: 0; bottom: 0; right: 0;
+	background-image: 
+	-webkit-gradient(linear, 0 0, 100% 100%, 
+		color-stop(.25, rgba(255, 255, 255, .2)), 
+		color-stop(.25, transparent), color-stop(.5, transparent), 
+		color-stop(.5, rgba(255, 255, 255, .2)), 
+		color-stop(.75, rgba(255, 255, 255, .2)), 
+		color-stop(.75, transparent), to(transparent)
+	);
+	background-image: 
+		-moz-linear-gradient(
+		-45deg, 
+		rgba(255, 255, 255, .2) 25%, 
+		transparent 25%, 
+		transparent 50%, 
+		rgba(255, 255, 255, .2) 50%, 
+		rgba(255, 255, 255, .2) 75%, 
+		transparent 75%, 
+		transparent
+	);
+	z-index: 1;
+	-webkit-background-size: 50px 50px;
+	-moz-background-size: 50px 50px;
+	-webkit-animation: move 2s linear infinite;
+	-webkit-border-top-right-radius: 8px;
+	-webkit-border-bottom-right-radius: 8px;
+	-moz-border-radius-topright: 8px;
+	-moz-border-radius-bottomright: 8px;
+	border-top-right-radius: 8px;
+	border-bottom-right-radius: 8px;
+	-webkit-border-top-left-radius: 20px;
+	-webkit-border-bottom-left-radius: 20px;
+	-moz-border-radius-topleft: 20px;
+	-moz-border-radius-bottomleft: 20px;
+	border-top-left-radius: 20px;
+	border-bottom-left-radius: 20px;
+	overflow: hidden;
+}
+
+
+
+@-webkit-keyframes move {
+	0% {
+	background-position: 0 0;
+	}
+	100% {
+	background-position: 50px 50px;
+	}
+}
+
+body.green .meter > span {
+	background-color: rgb(43,194,83);
+	background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, rgb(43,194,83)),color-stop(1, rgb(84,240,84)));
+	background-image: -moz-linear-gradient(center bottom,rgb(43,194,83) 37%,rgb(84,240,84) 69%);
+}
+
+body.blue .meter > span {
+	background-color: #f1a165;
+	background-image: -moz-linear-gradient(top, #0000FF, #0080ff);
+	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #0000FF),color-stop(1, #0080ff));
+	background-image: -webkit-linear-gradient(#0000FF, #0080ff); 
+}
+
+body.orange .meter > span {
+	background-color: #f1a165;
+	background-image: -moz-linear-gradient(top, #f1a165, #f36d0a);
+	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #f1a165),color-stop(1, #f36d0a));
+	background-image: -webkit-linear-gradient(#f1a165, #f36d0a); 
+}
+
+body.red .meter > span {
+	background-color: #f0a3a3;
+	background-image: -moz-linear-gradient(top, #f0a3a3, #f42323);
+	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #f0a3a3),color-stop(1, #f42323));
+	background-image: -webkit-linear-gradient(#f0a3a3, #f42323);
+}
+
